# MySlam

./: CMakeLists.txt
cmake_modules/: FindG2O.cmake
src/: RunSlam.cpp
